Update main page styling

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   </head>
   <body>
 
-      <div class="jumbotron">
-          <h1>Stuff goes here</h1>
-          <p>Sorry...</p>
+      <div class="container" role="main">
+          <div class="jumbotron">
+              <h1>Stuff goes here</h1>
+              <p>Sorry...</p>
+          </div>
       </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
