--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="sytlesheet" href="style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,13 +45,13 @@
       </div>
     </nav>
 
-      <!-- main content -->
-      <div class="container" role="main">
-          <div class="jumbotron">
-              <h1>Stuff goes here</h1>
-              <p>Sorry...</p>
-          </div>
-      </div>
+    <!-- main content -->
+    <div class="container" role="main">
+        <div class="jumbotron">
+            <h1>Stuff goes here</h1>
+            <p>Sorry...</p>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
