--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- main content -->
-    <div class="container" role="main">
+    <div class="container padded" role="main">
         <div class="jumbotron">
             <h1>Stuff goes here</h1>
             <p>Sorry...</p>
