Add date picker?

--- a/md/index.html
+++ b/md/index.html
@@ -28,6 +28,12 @@
         <div class="jumbotron">
             <h1>Happy Mother's Day</h1>
             <p>Select the dates and click 'send'.</p>
+
+            <br/>
+
+            <div id="md-form">
+                <input type="text" class="form-control">
+            </div>
         </div>
     </div>
 
@@ -35,5 +41,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <!-- mother's day script -->
+    <script type="text/javascript">
+        $('#md-form input').datepicker({});
+    </script>
   </body>
 </html>
