Add links to datepicker

--- a/md/index.html
+++ b/md/index.html
@@ -9,7 +9,13 @@
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- custom style sheet -->
     <link rel="stylesheet" href="../css/style.css">
+
+    <!-- datepicker -->
+    <link rel="stylesheet" href="../css/bootstrap-datepicker3.min.css">
+    <script src="../js/bootstrap-datepicker.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
