--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <!-- custom styling -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- datepicker -->
+    <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
+    <script src="js/bootstrap-datepicker.min.js"></script>
+
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
