--- a/md/index.html
+++ b/md/index.html
@@ -15,7 +15,6 @@
 
     <!-- datepicker -->
     <link rel="stylesheet" href="../css/bootstrap-datepicker3.min.css">
-    <script src="../js/bootstrap-datepicker.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,6 +46,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!-- datepicker -->
+    <script src="../js/bootstrap-datepicker.min.js"></script>
 
     <!-- mother's day script -->
     <script type="text/javascript">
