Update datepicker format

--- a/md/index.html
+++ b/md/index.html
@@ -51,7 +51,9 @@
 
     <!-- mother's day script -->
     <script type="text/javascript">
-        $('#md-form input').datepicker({});
+        $('#md-form input').datepicker({
+            format: "yyyy-mm-dd"
+        });
     </script>
   </body>
 </html>
