Force inputs on same line

--- a/md/index.html
+++ b/md/index.html
@@ -41,16 +41,18 @@
 
             <br/>
 
-            <form id="md-form">
-                <div class="input-group">
-                    <span class="input-group-addon">Arrival</span>
-                    <input id="arrival" type="text" class="form-control">
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon">Departure</span>
-                    <input id="departure" type="text" class="form-control">
-                </div>
-            </form>
+            <div class="row">
+                <form id="md-form">
+                    <div class="input-group">
+                        <span class="input-group-addon">Arrival</span>
+                        <input id="arrival" type="text" class="form-control">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon">Departure</span>
+                        <input id="departure" type="text" class="form-control">
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
