Just kidding, now I am

--- a/md/index.html
+++ b/md/index.html
@@ -43,13 +43,17 @@
 
             <div class="row">
                 <form id="md-form">
-                    <div class="input-group">
-                        <span class="input-group-addon">Arrival</span>
-                        <input id="arrival" type="text" class="form-control">
+                    <div class=:col-lg-6">
+                        <div class="input-group">
+                            <span class="input-group-addon">Arrival</span>
+                            <input id="arrival" type="text" class="form-control">
+                        </div>
                     </div>
-                    <div class="input-group">
-                        <span class="input-group-addon">Departure</span>
-                        <input id="departure" type="text" class="form-control">
+                    <div class=:col-lg-6">
+                        <div class="input-group">
+                            <span class="input-group-addon">Departure</span>
+                            <input id="departure" type="text" class="form-control">
+                        </div>
                     </div>
                 </form>
             </div>
