--- a/md/index.html
+++ b/md/index.html
@@ -32,17 +32,16 @@
     <div class="container" role="main">
         <div class="jumbotron">
             <h1>Dearest Mother...</h1>
-            <p>If you are reading this, that means that you wish to turn in one
-            of the 'Offspring Visitation Coupons' I delivered.  Simple enter the
+            <p>If you are reading this, that means that you wish to redeem one
+            of the 'Offspring Visitation Coupons' I delivered.  Simply enter the
             requested dates in the form below and hit send.  This will update
             your offspring(me) of the epected arrival and departure dates. 
             These coupons can be redeemed at anytime, for any length, although
-            the offspring wishes to keep it reasonable.</p>
+            the offspring wishes for you to keep it reasonable.</p>
 
             <br/>
 
             <div class="row">
-                <form id="md-form">
                     <div class=:col-lg-6">
                         <div class="input-group">
                             <span class="input-group-addon">Arrival</span>
@@ -55,7 +54,6 @@
                             <input id="departure" type="text" class="form-control">
                         </div>
                     </div>
-                </form>
             </div>
         </div>
     </div>
