--- a/md/index.html
+++ b/md/index.html
@@ -44,13 +44,13 @@
             <div class="row">
                     <div class=:col-lg-6">
                         <div class="input-group">
-                            <span class="input-group-addon">Arrival</span>
+                            <span class="input-group-addon datable">Arrival</span>
                             <input id="arrival" type="text" class="form-control">
                         </div>
                     </div>
                     <div class=:col-lg-6">
                         <div class="input-group">
-                            <span class="input-group-addon">Departure</span>
+                            <span class="input-group-addon datable">Departure</span>
                             <input id="departure" type="text" class="form-control">
                         </div>
                     </div>
@@ -66,7 +66,7 @@
 
     <!-- mother's day script -->
     <script type="text/javascript">
-        $('#md-form input').datepicker({
+        $('#datable').datepicker({
             format: "yyyy-mm-dd"
         });
     </script>
