Really fix it this time

--- a/md/index.html
+++ b/md/index.html
@@ -44,14 +44,14 @@
             <div class="row">
                     <div class=:col-lg-6">
                         <div class="input-group">
-                            <span class="input-group-addon datable">Arrival</span>
-                            <input id="arrival" type="text" class="form-control">
+                            <span class="input-group-addon">Arrival</span>
+                            <input id="arrival" type="text" class="form-control datable">
                         </div>
                     </div>
                     <div class=:col-lg-6">
                         <div class="input-group">
-                            <span class="input-group-addon datable">Departure</span>
-                            <input id="departure" type="text" class="form-control">
+                            <span class="input-group-addon">Departure</span>
+                            <input id="departure" type="text" class="form-control datable">
                         </div>
                     </div>
             </div>
