--- a/md/index.html
+++ b/md/index.html
@@ -66,7 +66,7 @@
 
     <!-- mother's day script -->
     <script type="text/javascript">
-        $('#datable').datepicker({
+        $('.datable').datepicker({
             format: "yyyy-mm-dd"
         });
     </script>
