--- a/md/index.html
+++ b/md/index.html
@@ -12,6 +12,7 @@
 
     <!-- custom style sheet -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/md.css">
 
     <!-- datepicker -->
     <link rel="stylesheet" href="../css/bootstrap-datepicker3.min.css">
