--- a/md/index.html
+++ b/md/index.html
@@ -34,11 +34,12 @@
         <div class="jumbotron">
             <h1>Dearest Mother...</h1>
             <p>If you are reading this, that means that you wish to redeem one
-            of the 'Offspring Visitation Coupons' I delivered.  Simply enter the
-            requested dates in the form below and hit send.  This will update
-            your offspring(me) of the epected arrival and departure dates. 
-            These coupons can be redeemed at anytime, for any length, although
-            the offspring wishes for you to keep it reasonable.</p>
+              of the 'Offspring Visitation Coupons' I have provided you with.
+              Simply enter the requested dates in the form below and hit send.
+              This will update your offspring(me) of the epected arrival and
+              departure dates.  These coupons can be redeemed at anytime, for any
+              length, although the offspring wishes for you to keep it reasonable.
+            </p>
 
         </div>
 
