Add colors for buttons?

--- a/md/index.html
+++ b/md/index.html
@@ -46,13 +46,13 @@
             <div class="row">
                     <div class="col-lg-6">
                         <div class="input-group">
-                            <span class="input-group-addon">Arrival</span>
+                            <span class="input-group-addon danger">Arrival</span>
                             <input id="arrival" type="text" class="form-control datable">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="input-group">
-                            <span class="input-group-addon">Departure</span>
+                            <span class="input-group-addon danger">Departure</span>
                             <input id="departure" type="text" class="form-control datable">
                         </div>
                     </div>
