--- a/md/index.html
+++ b/md/index.html
@@ -36,27 +36,36 @@
             <p>If you are reading this, that means that you wish to redeem one
               of the 'Offspring Visitation Coupons' I have provided you with.
               Simply enter the requested dates in the form below and hit send.
-              This will update your offspring(me) of the epected arrival and
-              departure dates.  These coupons can be redeemed at anytime, for any
-              length, although the offspring wishes for you to keep it reasonable.
+              This will update your offspring(me) of the expected arrival and
+              departure dates.  These coupons can be redeemed at anytime, for
+              any length, although the offspring wishes for you to keep it
+              reasonable.
+            </p>
+            <p>Unfortunately, my skills as a programmer may have failed me. I 
+            hope that my skills as a son do not fail me so. Originally, I had 
+            planned this website to send a email automatically, but with my 
+            current web hosting abilities, this may not be the case.
             </p>
 
         </div>
 
+        <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
             <div class="row">
-                    <div class="col-lg-6">
-                        <div class="input-group">
-                            <span class="input-group-addon danger">Arrival</span>
-                            <input id="arrival" type="text" class="form-control datable">
-                        </div>
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <span class="input-group-addon danger">Arrival</span>
+                        <input name="comment" id="arrival" type="text" class="form-control datable">
                     </div>
-                    <div class="col-lg-6">
-                        <div class="input-group">
-                            <span class="input-group-addon danger">Departure</span>
-                            <input id="departure" type="text" class="form-control datable">
-                        </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <span class="input-group-addon danger">Departure</span>
+                        <input name="comment" id="departure" type="text" class="form-control datable">
                     </div>
+                </div>
             </div>
+            <input type="submit" value="Send">
+        </form>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
