Update buttons and sending data?

--- a/md/index.html
+++ b/md/index.html
@@ -54,17 +54,17 @@
                 <div class="col-lg-6">
                     <div class="input-group">
                         <span class="input-group-addon danger">Arrival</span>
-                        <input name="comment" id="arrival" type="text" class="form-control datable">
+                        <input name="arrival" id="arrival" type="text" class="form-control datable">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="input-group">
                         <span class="input-group-addon danger">Departure</span>
-                        <input name="comment" id="departure" type="text" class="form-control datable">
+                        <input name="departure" id="departure" type="text" class="form-control datable">
                     </div>
                 </div>
             </div>
-            <input type="submit" value="Send">
+            <input type="submit" value="Send" class="btn btn-primary">
         </form>
     </div>
 
