--- a/md/index.html
+++ b/md/index.html
@@ -64,7 +64,8 @@
                     </div>
                 </div>
             </div>
-            <input type="submit" value="Send" class="btn btn-primary">
+            <br/>
+            <input type="submit" value="Send" class="btn btn-danger">
         </form>
     </div>
 
