--- a/md/index.html
+++ b/md/index.html
@@ -33,20 +33,22 @@
     <div class="container" role="main">
         <div class="jumbotron">
             <h1>Dearest Mother...</h1>
-            <p>If you are reading this, that means that you wish to redeem one
-              of the 'Offspring Visitation Coupons' I have provided you with.
-              Simply enter the requested dates in the form below and hit send.
-              This will update your offspring(me) of the expected arrival and
-              departure dates.  These coupons can be redeemed at anytime, for
-              any length, although the offspring wishes for you to keep it
-              reasonable.
+            <p>
+                If you are reading this, that means that you wish to redeem one
+                of the 'Offspring Visitation Coupons' I have provided you with.
+                Simply enter the requested dates in the form below and hit send.
+                This will update your offspring(me) of the expected arrival and
+                departure dates.  These coupons can be redeemed at anytime, for
+                any length, although the offspring wishes for you to keep it
+                reasonable.
             </p>
-            <p>Unfortunately, my skills as a programmer may have failed me. I 
-            hope that my skills as a son do not fail me so. Originally, I had 
-            planned this website to send a email automatically, but with my 
-            current web hosting abilities, this may not be the case.
+            <p>
+                Although a QR code probably pointed you here, the send link may 
+                or may not work, so I suggest you save this URL for use later on
+                a PC.  Even then, without proper setup it still may not work. 
+                If all else fails, feel free to deliver the dates via email,
+                text, or call.
             </p>
-
         </div>
 
         <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
