--- a/md/index.html
+++ b/md/index.html
@@ -44,10 +44,10 @@
             </p>
             <p>
                 Although a QR code probably pointed you here, the send link may 
-                or may not work, so I suggest you save this URL for use later on
-                a PC.  Even then, without proper setup it still may not work. 
-                If all else fails, feel free to deliver the dates via email,
-                text, or call.
+                or may not work on mobile, so I suggest you save this URL for
+                use later on a PC.  Even then, without proper setup it still 
+                may not work.  If all else fails, feel free to deliver the
+                dates via email, text, or call.
             </p>
         </div>
 
