Test remove color

--- a/md/index.html
+++ b/md/index.html
@@ -53,16 +53,17 @@
 
         <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <span class="input-group-addon danger">Arrival</span>
-                        <input name="arrival" id="arrival" type="text" class="form-control datable">
+                    <div class="col-lg-6">
+                        <div class="input-group">
+                            <span class="input-group-addon">Arrival</span>
+                            <input id="arrival" type="text" class="form-control datable">
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <span class="input-group-addon danger">Departure</span>
-                        <input name="departure" id="departure" type="text" class="form-control datable">
+                    <div class="col-lg-6">
+                        <div class="input-group">
+                            <span class="input-group-addon">Departure</span>
+                            <input id="departure" type="text" class="form-control datable">
+                        </div>
                     </div>
                 </div>
             </div>
