Potentially fix the email bug

--- a/md/index.html
+++ b/md/index.html
@@ -52,7 +52,7 @@
       </div> <!-- jumbotron -->
 
         <div class="row">
-      <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
+      <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain" target="_top">
           <div class="col-lg-6">
             <div class="input-group">
               <span class="input-group-addon danger">Arrival</span>
