Maybe fix it another way

--- a/md/index.html
+++ b/md/index.html
@@ -52,7 +52,7 @@
       </div> <!-- jumbotron -->
 
         <div class="row">
-      <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain" target="_top">
+      <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
           <div class="col-lg-6">
             <div class="input-group">
               <span class="input-group-addon danger">Arrival</span>
@@ -67,7 +67,7 @@
             </div> <!-- input-group -->
           </div> <!-- col-lg-6 -->
         <br/>
-        <input type="submit" value="Send" class="btn btn-danger">
+        <input type="submit" value="Send" class="btn btn-danger" target="_top">
       </form>
         </div> <!-- row -->
     </div> <!-- container -->
