--- a/md/index.html
+++ b/md/index.html
@@ -68,7 +68,7 @@
           </div> <!-- col-lg-6 -->
         </div> <!-- row -->
         <br/>
-        <input type="submit" value="Send" class="btn btn-danger" target="_top">
+        <input type="submit" value="Send" class="btn btn-danger">
       </form>
     </div> <!-- container -->
 
