Add name value to inputs
Hopefully this will force the button to actually send the email

--- a/md/index.html
+++ b/md/index.html
@@ -56,14 +56,14 @@
           <div class="col-lg-6">
             <div class="input-group">
               <span class="input-group-addon danger">Arrival</span>
-              <input id="arrival" type="text" class="form-control datable">
+              <input id="arrival" name="ariival" type="text" class="form-control datable">
             </div> <!-- input-group -->
           </div> <!-- col-log-6 -->
 
           <div class="col-lg-6">
             <div class="input-group">
               <span class="input-group-addon danger">Departure</span>
-              <input id="departure" type="text" class="form-control datable">
+              <input id="departure" name="daperture" type="text" class="form-control datable">
             </div> <!-- input-group -->
           </div> <!-- col-lg-6 -->
         </div> <!-- row -->
