Add message field

--- a/md/index.html
+++ b/md/index.html
@@ -53,19 +53,27 @@
 
       <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="input-group">
               <span class="input-group-addon danger">Arrival</span>
-              <input id="arrival" name="ariival" type="text" class="form-control datable">
+              <input id="arrival" name="arrival" type="text" class="form-control datable">
             </div> <!-- input-group -->
-          </div> <!-- col-log-6 -->
+          </div> <!-- col-lg-4 -->
 
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="input-group">
               <span class="input-group-addon danger">Departure</span>
-              <input id="departure" name="daperture" type="text" class="form-control datable">
+              <input id="departure" name="departure" type="text" class="form-control datable">
             </div> <!-- input-group -->
           </div> <!-- col-lg-6 -->
+
+          <div class="col-lg-4">
+            <div class="input-group">
+              <span class="input-group-addon danger">Message</span>
+              <input id="message" name="message" type="text" class="form-control">
+            </div> <!-- input-group -->
+          </div> <!-- col-lg-4 -->
+
         </div> <!-- row -->
         <br/>
         <input type="submit" value="Send" class="btn btn-danger">
