Make mailto open in new tab?

--- a/md/index.html
+++ b/md/index.html
@@ -51,7 +51,7 @@
         </p>
       </div> <!-- jumbotron -->
 
-      <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain">
+      <form action="MAILTO:jabocg@gmail.com" method="POST" enctype="text/plain" target="_blank">
         <div class="row">
           <div class="col-lg-4">
             <div class="input-group">
