Fix subject tab
HTML automatically makes `'` into `&39;` for security reasons probably,
     but that doesn't look good in a subject line. So I removed it.

--- a/md/index.html
+++ b/md/index.html
@@ -51,7 +51,7 @@
         </p>
       </div> <!-- jumbotron -->
 
-      <form action="MAILTO:jabocg@gmail.com?subject=Mother's Day" method="POST" enctype="text/plain" target="_blank">
+      <form action="MAILTO:jabocg@gmail.com?subject=Mothers Day" method="POST" enctype="text/plain" target="_blank">
         <div class="row">
           <div class="col-lg-4">
             <div class="input-group">
