Use ID instead of class

--- a/md/index.html
+++ b/md/index.html
@@ -98,11 +98,11 @@
     <!-- button to send email the other way -->
     <script type="text/javascript">
       function sendMsg() {
-        var ar = $(".arrival");
+        var ar = $("#arrival");
         console.log(ar);
-        var dep = $(".departure");
+        var dep = $("#departure");
         console.log(dep);
-        var mes = $(".message");
+        var mes = $("#message");
         console.log(mes);
         var body = "";
         body.concat(ar.value);
